--- a/originalAppTest1/Base.lproj/Main.storyboard
+++ b/originalAppTest1/Base.lproj/Main.storyboard
@@ -15,68 +15,52 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Sj-bw-VVq">
-                                <rect key="frame" x="152.66666666666666" y="517" width="85" height="35"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="85" id="HF4-3J-e5q"/>
-                                    <constraint firstAttribute="height" constant="35" id="dDz-X3-Phc"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="ストップ"/>
-                                <connections>
-                                    <action selector="stopButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LNF-kh-hhW"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="46C-8B-ok3">
-                                <rect key="frame" x="120" y="397" width="150" height="50"/>
+                                <rect key="frame" x="95" y="397" width="200" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="150" id="63V-O9-bRN"/>
+                                    <constraint firstAttribute="width" constant="200" id="4h3-RE-dea"/>
                                     <constraint firstAttribute="height" constant="50" id="elo-iE-E47"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w9g-iy-cUi">
-                                <rect key="frame" x="52.666666666666657" y="514.66666666666663" width="85" height="35"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="iT5-20-VUd"/>
-                                    <constraint firstAttribute="width" constant="85" id="sAg-Pd-J7N"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="スタート"/>
-                                <connections>
-                                    <action selector="startButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ad3-n4-o1x"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9uo-M0-PYb">
-                                <rect key="frame" x="247.66666666666663" y="499.66666666666674" width="85" height="35"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="85" id="qqG-SK-zEw"/>
-                                    <constraint firstAttribute="height" constant="35" id="v4K-6T-2oh"/>
-                                </constraints>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PCJ-I5-bja">
+                                <rect key="frame" x="259" y="527" width="82" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="リセット"/>
                                 <connections>
-                                    <action selector="resetButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QYK-LX-B8K"/>
+                                    <action selector="resetButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="icD-yI-RMp"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lXp-ui-bNd">
+                                <rect key="frame" x="50" y="527" width="82" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="スタート"/>
+                                <connections>
+                                    <action selector="startButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1WN-CI-DcN"/>
                                 </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.5908203125" green="0.8984375" blue="0.5380859375" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="6Sj-bw-VVq" firstAttribute="top" secondItem="46C-8B-ok3" secondAttribute="bottom" constant="70" id="84D-X8-KoF"/>
+                            <constraint firstItem="lXp-ui-bNd" firstAttribute="top" secondItem="46C-8B-ok3" secondAttribute="bottom" constant="80" id="2cK-Bu-oCv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PCJ-I5-bja" secondAttribute="trailing" constant="49" id="5le-bp-4tA"/>
                             <constraint firstItem="46C-8B-ok3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GS7-ZJ-SD8"/>
+                            <constraint firstItem="PCJ-I5-bja" firstAttribute="top" secondItem="lXp-ui-bNd" secondAttribute="top" id="Gl7-6m-4Yc"/>
+                            <constraint firstItem="lXp-ui-bNd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="XSl-kR-J3P"/>
                             <constraint firstItem="46C-8B-ok3" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="s9A-OM-Umd"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="startButtonVar" destination="lXp-ui-bNd" id="TEq-J2-THW"/>
                         <outlet property="timerLabel" destination="46C-8B-ok3" id="Egt-FD-KzB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-477" y="88"/>
+            <point key="canvasLocation" x="-352" y="88"/>
         </scene>
     </scenes>
 </document>
