--- a/originalAppTest1/Launch Screen.storyboard
+++ b/originalAppTest1/Launch Screen.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -11,30 +12,35 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <view key="view" contentMode="scaleToFill" id="qJb-Qr-vVH">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage" translatesAutoresizingMaskIntoConstraints="NO" id="KSY-fj-Djq">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch Screen" translatesAutoresizingMaskIntoConstraints="NO" id="cF4-ip-Rop">
+                                <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                             </imageView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="Tzp-pb-odb"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="KSY-fj-Djq" secondAttribute="trailing" id="4mX-Pv-7gd"/>
-                            <constraint firstItem="KSY-fj-Djq" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="4n2-pQ-Lu5"/>
-                            <constraint firstAttribute="bottom" secondItem="KSY-fj-Djq" secondAttribute="bottom" id="8Ym-K4-tuq"/>
-                            <constraint firstItem="KSY-fj-Djq" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="dcx-Kx-m2P"/>
+                            <constraint firstItem="cF4-ip-Rop" firstAttribute="centerX" secondItem="qJb-Qr-vVH" secondAttribute="centerX" id="3eC-ct-VFr"/>
+                            <constraint firstItem="cF4-ip-Rop" firstAttribute="top" secondItem="qJb-Qr-vVH" secondAttribute="top" id="4ix-2c-90v"/>
+                            <constraint firstItem="cF4-ip-Rop" firstAttribute="leading" secondItem="Tzp-pb-odb" secondAttribute="leading" id="B36-ha-Eup"/>
+                            <constraint firstItem="cF4-ip-Rop" firstAttribute="centerY" secondItem="qJb-Qr-vVH" secondAttribute="centerY" id="V87-HS-7a9"/>
+                            <constraint firstItem="cF4-ip-Rop" firstAttribute="trailing" secondItem="Tzp-pb-odb" secondAttribute="trailing" id="jHs-9Y-oy5"/>
+                            <constraint firstAttribute="bottom" secondItem="cF4-ip-Rop" secondAttribute="bottom" id="m3v-7r-BmS"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.173913043478265" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="374.18478260869568"/>
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchImage" width="562.5" height="1218"/>
+        <image name="Launch Screen" width="414" height="896"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
