--- a/originalAppTest1/Base.lproj/Main.storyboard
+++ b/originalAppTest1/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_0" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,45 +12,17 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="originalAppTest1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="46C-8B-ok3">
-                                <rect key="frame" x="58.666666666666657" y="383" width="272.66666666666674" height="78.333333333333314"/>
+                                <rect key="frame" x="71" y="409" width="272.5" height="78.5"/>
                                 <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="70"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IwQ-Gf-9DI">
-                                <rect key="frame" x="43" y="613" width="130" height="45"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="eLH-zI-E2t"/>
-                                    <constraint firstAttribute="width" constant="130" id="peB-lK-q1b"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="30"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="START">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="startButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HoM-dJ-Agc"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PCJ-I5-bja">
-                                <rect key="frame" x="222" y="614" width="125" height="45"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="30"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="RESET">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="resetButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="icD-yI-RMp"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o9y-Sc-cyD">
-                                <rect key="frame" x="268" y="44" width="79" height="74"/>
+                                <rect key="frame" x="270" y="74" width="124" height="74"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="Twitter social icons - circle - blue"/>
@@ -58,22 +30,49 @@
                                     <action selector="twitterShareButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UHo-U1-QEU"/>
                                 </connections>
                             </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="lgR-dP-9g6">
+                                <rect key="frame" x="73" y="607.5" width="268" height="46"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IwQ-Gf-9DI">
+                                        <rect key="frame" x="0.0" y="0.0" width="124" height="46"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="30"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="START">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="startButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HoM-dJ-Agc"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PCJ-I5-bja">
+                                        <rect key="frame" x="144" y="0.0" width="124" height="46"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="30"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="RESET">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="resetButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="icD-yI-RMp"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.0" green="0.96470588235294119" blue="0.81176470588235294" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="tintColor" red="0.0" green="0.96470588235294119" blue="0.81176470588235294" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="46C-8B-ok3" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="0Cv-pu-WrQ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="PCJ-I5-bja" secondAttribute="bottom" constant="151" id="F6w-fg-uL5"/>
-                            <constraint firstItem="PCJ-I5-bja" firstAttribute="leading" secondItem="IwQ-Gf-9DI" secondAttribute="trailing" constant="49" id="HFt-Vv-qfA"/>
-                            <constraint firstItem="IwQ-Gf-9DI" firstAttribute="top" secondItem="PCJ-I5-bja" secondAttribute="top" id="Two-Fn-bgc"/>
-                            <constraint firstItem="o9y-Sc-cyD" firstAttribute="trailing" secondItem="PCJ-I5-bja" secondAttribute="trailing" id="bKh-3L-EIL"/>
-                            <constraint firstItem="IwQ-Gf-9DI" firstAttribute="centerY" secondItem="PCJ-I5-bja" secondAttribute="centerY" id="cPI-J2-lDr"/>
-                            <constraint firstItem="46C-8B-ok3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eFV-Wz-H8G"/>
-                            <constraint firstItem="o9y-Sc-cyD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hTD-O9-2Yh"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PCJ-I5-bja" secondAttribute="trailing" constant="43" id="nm7-nR-Ah2"/>
-                            <constraint firstItem="o9y-Sc-cyD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="268" id="q5i-48-0HD"/>
-                            <constraint firstItem="IwQ-Gf-9DI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="43" id="rHl-1G-fWs"/>
+                            <constraint firstItem="lgR-dP-9g6" firstAttribute="top" secondItem="46C-8B-ok3" secondAttribute="bottom" constant="120" id="5eV-wS-LVP"/>
+                            <constraint firstItem="lgR-dP-9g6" firstAttribute="centerX" secondItem="46C-8B-ok3" secondAttribute="centerX" id="BPb-Wv-Dpi"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="o9y-Sc-cyD" secondAttribute="trailing" constant="20" id="Jmh-Wa-5PN"/>
+                            <constraint firstItem="46C-8B-ok3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bFo-5a-6DO"/>
+                            <constraint firstItem="46C-8B-ok3" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="k66-ta-Jyo"/>
+                            <constraint firstItem="IwQ-Gf-9DI" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.3" id="kMi-37-6Pk"/>
+                            <constraint firstItem="PCJ-I5-bja" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.3" id="mRq-xt-nwU"/>
+                            <constraint firstItem="o9y-Sc-cyD" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.3" id="pLx-2W-Maf"/>
+                            <constraint firstItem="o9y-Sc-cyD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="utE-3b-Zqg"/>
                         </constraints>
                     </view>
                     <connections>
